Update activity_dashboard.xml.xml and CompanyRegisterActivity.java

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -213,7 +213,7 @@
         android:layout_above="@id/bottomNavigation"
         android:layout_margin="16dp"
         android:text="Log Out"
-        android:backgroundTint="#FF4444"
+        android:backgroundTint="@color/error_47"
         android:textColor="#FFFFFF" />
 
     <!-- Bottom Navigation -->
